even more spacing issues

--- a/styles.css
+++ b/styles.css
@@ -48,11 +48,11 @@ body {
   line-height: 1.2;
   color: #949fac;
   margin-top: 20px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .text-section h1 {
-  font-family: 'Syne';
+  font-family: 'Kumbh Sans';
   font-size: 60px;
   letter-spacing: -2px;
   line-height: 1.2;
